--- a/src/WebAPI/appsettings.json
+++ b/src/WebAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Database=order_management_system;Username=postgres;Password=OhNoAnyway;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
